--- a/pull_request_template.yml
+++ b/pull_request_template.yml
@@ -8,6 +8,6 @@ pull_request_templates:
 
   - name: Default Template
     description: General template for all PRs
-    file: PULL_REQUEST_TEMPLATE/PULL_REQUEST_TEMPLATE.md
+    file: PULL_REQUEST_TEMPLATE.md
     branches:
       - main
